third AB lab update - completed

--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,11 +76,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>id</th>\n",
+       "      <th>group</th>\n",
+       "      <th>action</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2016-09-24 19:59:02.646620</td>\n",
+       "      <td>671993</td>\n",
+       "      <td>control</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>2016-09-24 21:00:12.278374</td>\n",
+       "      <td>560027</td>\n",
+       "      <td>control</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23</td>\n",
+       "      <td>2016-09-25 00:25:14.141290</td>\n",
+       "      <td>281985</td>\n",
+       "      <td>control</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>24</td>\n",
+       "      <td>2016-09-25 01:14:48.603202</td>\n",
+       "      <td>407864</td>\n",
+       "      <td>control</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>2016-09-25 02:16:11.046654</td>\n",
+       "      <td>342984</td>\n",
+       "      <td>control</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     timestamp      id    group action\n",
+       "3   2016-09-24 19:59:02.646620  671993  control   view\n",
+       "9   2016-09-24 21:00:12.278374  560027  control   view\n",
+       "23  2016-09-25 00:25:14.141290  281985  control   view\n",
+       "24  2016-09-25 01:14:48.603202  407864  control   view\n",
+       "25  2016-09-25 02:16:11.046654  342984  control   view"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "df_con.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Control group clicks: 932 Experiment group clicks: 928\n",
+      "Control group views: 3332 Experiment group views: 2996\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Your code here\n",
+    "control_clicks = df_con['id'][df_con['action']=='click'].nunique()\n",
+    "exp_clicks = df_exp['id'][df_exp['action']=='click'].nunique()\n",
+    "print('Control group clicks:', control_clicks, 'Experiment group clicks:', exp_clicks)\n",
+    "\n",
+    "control_views = df_con['id'][df_con['action']=='view'].nunique()\n",
+    "exp_views = df_exp['id'][df_exp['action']=='view'].nunique()\n",
+    "print('Control group views:', control_views, 'Experiment group views:', exp_views)"
    ]
   },
   {
@@ -111,11 +217,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "838.0168067226891"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here \n",
+    "control_ratio = (control_clicks / control_views)\n",
+    "expectedclicks = exp_views * control_ratio\n",
+    "expectedclicks"
    ]
   },
   {
@@ -128,11 +248,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.568547907005815"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "sd = np.sqrt(expectedclicks * (1-control_ratio))\n",
+    "sd"
    ]
   },
   {
@@ -145,11 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00012486528006951198"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import scipy.stats\n",
+    "z = (exp_clicks - expectedclicks) / sd\n",
+    "scipy.stats.norm.sf(z)"
    ]
   },
   {
